# bus.osm.kr

./: .env.example  .gitignore  Cargo.toml  README.md  bus-api-osm.service  postgre.sql
script/: csv2pg.py  euc2utf8.py
src/: ggd.rs  main.rs  seoul.rs
web/: index.html
