[package]
name = "bus-api-osm"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.7.0"
chrono = "0.4.38"
deadpool-postgres = "0.14.0"
dotenv = "0.15.0"
num_cpus = "1.16.0"
serde = { version = "1.0.203", features = ["derive"] }
tokio-postgres = { version="0.7.10", features = ["with-chrono-0_4"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
